@@ -2,36 +2,37 @@ LibTorrent
 
 CONTACT
 
-   Send bug reports, suggestions and patches to <jaris@ifi.uio.no>.
+   Send bug reports, suggestions and patches to <jaris@ifi.uio.no> or
+  to the mailinglist.
 
 DOWNLOADING 220mb
 
-   rtorrent
-   Kernel 4.43 User 6.13 MajPF 1738 MinPF 54231
+  ./rtorrent
+  7.22 user 4.84 system 1:26.69 elapsed 13 %CPU
 
-   btdownloadcurses.py
-   Kernel 20.85 User 46.92 MajPF 2 MinPF 182264
+  ./btdownloadcurses.py
+  44.74 user 20.00 system 2:04.35 elapsed 52 %CPU
 
 UPLOADING 220mb
 
-   rtorrent
-   Kernel 4.50 User 5.88 MajPF 3187 MinPF 108170
+  ./rtorrent
+  5.98 user 4.59 system 1:38.47 elapsed 10 %CPU
 
-   btdownloadcurses.py
-   Kernel 11.74 User 22.50 Maj 25 Min 34613
+  btdownloadcurses.py
+  21.28 user 11.28 system 1:30.34 elapsed 36 %CPU
 
 TESTS (PRELIMINARY)
 
    The higher number of page faults in rtorrent happens since mmap'ed
-   blocks of the file might not be in memory when it tries to
-   read/write. Even though the official BitTorrent client uses python,
-   that shouldn't have this much impact on CPU usage.
+  blocks of the file might not be in memory when it tries to
+  read/write. Even though the official BitTorrent client uses python,
+  that shouldn't have this much impact on CPU usage.
 
-LIBRARY SIZE
+LOCAL TRANSFER RATES COMPARED WITH POPULAR CLIENTS
 
-   Due to extensive use of nested template algorithms the library gets
-   bloated when including debugging information. As of 0.1.8 the library
-   is 2.6Mb and striping reduces it to 250Kb. Obviously stable releases
-   should disable debugging information in 'configure'. The library
-   contains some template functions that are over 1000 character long
-   which c++ mangles into 300+ character names. Strip is your friend ;)
+   While testing uploading from a libTorrent client to some popular
+  clients i got some fairly interesting numbers on an 800Mhz
+  PIII. Uploading to another libTorrent client got transfer rates of 4
+  MB/s. To the official BitTorrent client the rates were around 2 MB/s,
+  while Azureus only managed a pathetic 500 KB/s. Does it spend the
+  equivalent of 1.5 MB/s on those nice and shiny GUI thingies?
