@@ -4,7 +4,8 @@ max peers does not yet disconnect them.
 This client is just something i've been throwing togheter as i
 finished implementing stuff in the library. When i'm finished with the
 important parts of the library the API will be rewritten to something
-more usable. I will also do a complete rewrite of the client.
+more usable. I will also do a complete rewrite of the client. I hope
+the new client will have a more intuitive interface and better layout.
 
 If your system doesn't have "execinfo.h", uncomment "#define
 USE_EXECINFO" in rtorrent.cc. This will be handled by an autoconf
